Add select cities

--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -203,5 +203,35 @@
             </objects>
             <point key="canvasLocation" x="-2.8985507246376816" y="11.383928571428571"/>
         </scene>
+        <!--Select City View Controller-->
+        <scene sceneID="qB2-l0-0Jg">
+            <objects>
+                <viewController storyboardIdentifier="SelectCityViewController" id="MQJ-4g-nHN" customClass="SelectCityViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BIr-M1-TKk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="85f-He-gq6">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="85f-He-gq6" firstAttribute="leading" secondItem="40c-0l-i9E" secondAttribute="leading" id="E7P-A1-HzD"/>
+                            <constraint firstItem="85f-He-gq6" firstAttribute="top" secondItem="40c-0l-i9E" secondAttribute="top" id="FAh-J4-6Km"/>
+                            <constraint firstItem="85f-He-gq6" firstAttribute="bottom" secondItem="40c-0l-i9E" secondAttribute="bottom" id="wQE-s9-Xuv"/>
+                            <constraint firstItem="85f-He-gq6" firstAttribute="trailing" secondItem="40c-0l-i9E" secondAttribute="trailing" id="yrk-Ov-5CC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="40c-0l-i9E"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="85f-He-gq6" id="Q09-4x-fUT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zth-aG-zQp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="884.05797101449286" y="5.3571428571428568"/>
+        </scene>
     </scenes>
 </document>
